--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "serve": "^14.2.1",
     "vite": "^5.0.10",
     "vite-tsconfig-paths": "^4.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-vis" : "^1.12.1"
   },
   "scripts": {
     "start": "vite",
