--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,3 +17,4 @@ tower-http = { version = "*", features = ["cors"]}
 dashmap = "5.5.3"
 data-encoding = "2.5.0"
 rand = "0.8.5"
+clap = { version = "4.4.11", features = ["derive"] }
